# django-admin-parent-child-form-exam

./: pyproject.toml
myproj/myapp/: admin.py  models.py
myproj/myapp/migrations/: 0001_initial.py
myproj/myproj/: settings.py
