[tool.poetry]
name = "django-admin-parent-child-form-exam"
version = "0.1.0"
description = ""
authors = ["Yusuke MURAOKA <yusuke@jbking.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
